[package]
name = "image-deduplication-rs"
version = "0.1.0"
authors = ["MilaKyr <11293949+MilaKyr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
itertools = "0.10.1"

[lib]
name = "image_deduplication_rs"
path = "src/lib.rs"

